--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 
     background-color:#01EEFE;; 
     border-radius: 4px;
-    
 }
 ::-webkit-scrollbar-thumb:hover{
     background-color: #025c63;
@@ -23,11 +22,20 @@
     background-color: white;
 }
 
+/*======= Particles =======*/
+#particles-js{
 
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #20242D;
+    overflow: hidden;
+}
+  
 
 html, body{
 
-    overscroll-behavior: smooth;
+    scroll-behavior: smooth;
     background-color:  #20242D;
 }
 
@@ -44,7 +52,6 @@ header{
     z-index: 10;
     background: linear-gradient(to bottom, #20242D, transparent);
     backdrop-filter: blur(5px);
-
 }
 
 #logo{
@@ -79,7 +86,6 @@ header{
     background-color: white;
     transition: transform .8s;
 }
-
 
 /*Options nav*/
 #box-nav a{
@@ -275,7 +281,6 @@ section{
 #about-me .main-text{
     
     width: 80%;
-    
 }
 
 #about-me-text-1{
@@ -288,7 +293,6 @@ section{
     margin: 10px 0;
     border-radius: 16px;
     width: 100px;
-
 }
 
 .box-button-read-more button{
@@ -311,9 +315,7 @@ section{
     box-shadow: 0 0 8px #01EEFE;
 }
 
-
 /*My Skills*/
-
 #my-skills{
     height: auto;
 }
@@ -361,7 +363,7 @@ section{
     text-align: center;
 }
 
-/*Latest Projects*/
+/*======== Latest Projects ========*/
 #latest-projects{
 
     height: auto;
@@ -377,7 +379,6 @@ section{
     width: 85%;
     position: relative;
     overflow-x: hidden;
-    
 }
 
 #scrollX_latest_projects{
@@ -390,7 +391,6 @@ section{
     left: 0;
     height: 100%;
     transition: .6s;
-
 }
 
 .arrow-ball{
@@ -412,7 +412,6 @@ section{
 .arrow-ball:hover{
 
     box-shadow: 0 0 12px #01EEFE;
-
 }
 
 #left-ball-arrow{
@@ -430,20 +429,19 @@ section{
     height: 15px;
     width: 15px;
     top: 11px;
-    
     border-radius: 2px;
 }
 
 #left-arrow{
     transform: rotate(-45deg);
     left: 14px;
-    box-shadow: inset 2px 2px 2px #01EEFE;
+    box-shadow: inset 2px 2px 2px #000;
 }
 
 #right-arrow{
     transform: rotate(135deg);
     right: 14px;
-    box-shadow: inset 2px 2px 2px #000;
+    box-shadow: inset 2px 2px 2px #01EEFE;
 }
 
 .box-latest-projects{
@@ -474,6 +472,7 @@ section{
 }
 
 .div-project-text{
+
     position: absolute;
     top: 0;
     height: 100%;
@@ -524,7 +523,7 @@ section{
     color: white;
 }
 
-/*=====Education=====*/
+/*======= Education =======*/
 
 #education{
     height: auto;
@@ -536,6 +535,7 @@ section{
     padding: 20px 10px;
 }
 
+/*======= Footer =======*/
 footer{
 
     padding: 50px 20px;
@@ -552,7 +552,6 @@ footer{
     width: 360px;
     padding: 2px 10px;
 }
-
 
 #myName span{
 
